fix: drag drop behavior in web

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <div class="card droppable-card" ondragover="handleDragOver(event)" ondrop="handleDrop(event)">
+                <div class="card droppable-card" ondragenter="handleDragEnter(event)" ondrop="handleDrop(event)" ondragleave="handleDragLeave(event)">
                     <!-- <div class="card droppable-card"> -->
                     <div class="card-body">
                         <h5 class="card-title">Upload Images</h5>
